# umap_viewer

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  config.yaml  config_test.yaml  index.html  install_fonts.sh  publish_web.sh  umap_viewer-0a5fdf95c560ad662a741bc8e4a9cdf1f70c03d18be77334587fb0e32a750e5e4d61eff196d4d2a800010b549a968c8c.js  umap_viewer-28134b00d1fc0b81addbb2d7dc7c7cd47d857ebf4a7074c5a9857d3c961632c3c2e90f6e9fc68f3e0e0566dec7f3f110.js  umap_viewer-2964f40b1df0a62bafde97ebe8e4c3c5b99b6e86d26aa3230c0ac3ac22ef59a3b95927bd692a7d53b5cb83e5ad75efd0.js  umap_viewer-4aa94d83f546bfe353b9785d974615dac796ad187eef0ea707eb95384d693abf6705a37474ebbd6a06a2bc9dfee860ea.js  umap_viewer-8268be3ba8410fd5841ba0e713f0a69c081f9113ae845060b92fd5a4d70c34abf9ce9f979b5f7d17a9ad024b18ce8f15.js  umap_viewer-87a499c6f8b8bc8eb94b37c9981f89d9f85335525256611309f72be05b5334b987a119105604f787784cb1b256cfe278.js  umap_viewer-da56cc1c03c41ad5a0f72ca43993f45bdf3e21f03b3797c7eeb5362ec4b47db6863bd2ab58c297a840dcf02ce51df956.js  webapp_build.sh
data/: arxiv_ml_data_map.parquet  arxiv_ml_layer0_cluster_labels.parquet  arxiv_ml_layer1_cluster_labels.parquet  arxiv_ml_layer2_cluster_labels.parquet  arxiv_ml_layer3_cluster_labels.parquet  arxiv_ml_layer4_cluster_labels.parquet  cluster_colors.csv  umap_coordinate.parquet  umap_label.parquet  umap_label2.parquet
data/test/: test_coords.parquet  test_labels.parquet
misc/: gpu_pipeline.mmd
src/: app.rs  config.rs  data.rs  lib.rs  main.rs  point_renderer.rs
src/shaders/: points.wgsl
support_scripts/: csv_to_input_package.py
support_scripts/test_data/: gen_joined_csv.py  gen_test_data.py  (+3 more)
