[package]
name = "umap_viewer"
version = "0.1.0"
edition = "2021"

# rlib: shared between native bin and WASM bin; trunk processes the bin directly
[lib]
crate-type = ["rlib"]

[dependencies]
# default-features = false removes the bundled `glow` renderer so eframe
# uses wgpu exclusively — otherwise on WASM it falls back to glow and
# cc.wgpu_render_state ends up None.
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.29"
egui-wgpu = "0.29"
egui_extras = "0.29"
# webgl enables the WebGL2 backend used in browsers
wgpu = { version = "22", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
polars = { version = "0.53.0", features = ["parquet", "lazy", "dtype-array"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
indexmap = { version = "2", features = ["serde"] }
rfd = "0.15"
dirs = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# lets rand use browser crypto on WASM
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement"] }

[profile.release]
opt-level = 3
lto = false         # set to true only for distribution builds (adds ~5+ min)
codegen-units = 16  # parallel codegen for faster compile
